Tests Carga Masiva + correcciones